--- a/view/alert.html
+++ b/view/alert.html
@@ -1,1 +1,8 @@
-<div>uiAlert</div>
+<div class="ui-alert">
+    <div class="ui-alert-title">
+        Ops, aconteceu um problema!
+    </div>
+    <div class="ui-alert-message">
+        {{error}}
+    </div>
+</div>
