--- a/frontend/views/loginPage.html
+++ b/frontend/views/loginPage.html
@@ -6,20 +6,34 @@
 </head>
 <body ng-controller="loginPageCtrl">
     <section class="container">
-        <h1 style="text-align: center;">{{app}}</h1>
-        <form name="loginForm">
+        <h1 style="text-align: center;">{{app}}</h1><br>
+        <h2 style="color: #007bff;">{{msg}}</h2><br>
+        <form name="userForm">
           <h4>Name</h4> <input type="text" class="form-control" placeholder="name" aria-label="name"
-            aria-describedby="basic-addon1" ng-model="user.name">
+           name="name" ng-model="user.name" ng-minlength="10" ng-required="true" maxlength="45">
+            {{ user.name | uppercase}}
           <h4>Email</h4> <input type="text" class="form-control" placeholder="email" aria-label="email"
-            aria-describedby="basic-addon1" ng-model="user.email">
-          {{userForm.email}}
-          <h4>Password</h4><input type="text" class="form-control" placeholder="password" aria-label="password"
-            aria-describedby="basic-addon1" ng-model="user.password">
+           name="email" ng-model="user.email" ng-required="true">
+          <h4>Password</h4><input type="password" class="form-control" placeholder="password" aria-label="password"
+           name="password" ng-model="user.password" ng-required="true" ng-minlength="6" maxlength="10">
         </form>
-        <button type="submit" class="btn btn-primary btn-block" ng-disable="userForm.$invalid"
+       
+        <div ng-show="userForm.name.$error.minlength"class="alert alert-danger" style="margin-top: 15px; font-weight: bold;">
+          The name field must have at least 10 caracters
+        </div>
+        <div ng-show="userForm.name.$error.required && userForm.name.$dirty" class="alert alert-danger" style="margin-top: 15px; font-weight: bold;">
+          Please, fill the name field!
+        </div>
+        <div ng-show="userForm.email.$error.required && userForm.email.$dirty" class="alert alert-danger" style="margin-top: 15px; font-weight: bold;">
+          Please, fill the email field!
+        </div>
+        <div ng-show="userForm.password.$error.minlength && userForm.password.$dirty"class="alert alert-danger" style="margin-top: 15px; font-weight: bold;">
+          Your password must have at least 6 caracters
+        </div>
+        <button type="submit" class="btn btn-primary btn-block" ng-disabled="userForm.$invalid"
           ng-click="addUser(user)">Send</button>
-          <button type="submit" class="btn btn-primary btn-block" ng-disable="userForm.$invalid"
-          ng-click="addUser()">Show</button>
+          <button type="submit" class="btn btn-primary btn-block" ng-disabled="userForm.$invalid"
+          ng-click="">Show</button>
       </section>
 </body>
 </html>
