--- a/frontend/views/menuPage.html
+++ b/frontend/views/menuPage.html
@@ -8,6 +8,10 @@
     <div class="container">
         <h1 style="text-align: center; font-weight: bold;" >{{app}}</h1>
 
+        <div>
+            
+        </div>
+
     </div>
     
 </body>
