--- a/frontend/views/menuPage.html
+++ b/frontend/views/menuPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Menu</title>
 </head>
-<body ng-controller= "menuPageCtrl">    
+<body>    
     <div class="container">
         <h1 style="text-align: center; font-weight: bold;" >{{app}}</h1>
 
