--- a/frontend/views/registrationPage.html
+++ b/frontend/views/registrationPage.html
@@ -7,7 +7,6 @@
 <body>
     <section class="container">
         <h1 style="text-align: center;">{{app}}</h1><br>
-        <h2 style="color: #007bff; margin-bottom: 40px;">{{msg}}</h2>
         <form name="userForm">
           <h4>Name</h4> <input type="text" class="form-control" placeholder="name" aria-label="name"
            name="name" ng-model="user.name" ng-minlength="10" ng-required="true" maxlength="45">
@@ -29,8 +28,10 @@
         <div ng-show="userForm.password.$error.minlength && userForm.password.$dirty"class="alert alert-danger" style="margin-top: 15px; font-weight: bold;">
           Your password must have at least 6 caracters
         </div>
-        <a href="http://127.0.0.1:5500/frontend/index.html#/menu" style="text-decoration: none;"><button type="submit" class="btn btn-primary btn-block" ng-disabled="userForm.$invalid"
-          ng-click="addUser(user)">Send</button></a>
+        <button type="submit" class="btn btn-primary btn-block" ng-disabled="userForm.$invalid"
+          ng-click="addUser(user)">Send</button><br>
+        <div class="alert alert-danger" ng-if="error" style="font-weight: bold;">{{error}}</div>
+        <div style="font-weight: bold;">{{msg}}<a href="http://127.0.0.1:5500/frontend/index.html#/login" style="font-weight: bold; ">here</a></div>
       </section>
 </body>
 </html>
