--- a/frontend/views/loginPage.html
+++ b/frontend/views/loginPage.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>{{app}}</title>
 </head>
 <body>
     <section class="container">
