--- a/frontend/views/loginPage.html
+++ b/frontend/views/loginPage.html
@@ -19,7 +19,8 @@
         </div>
 
         <button type="submit" class="btn btn-primary btn-block"
-          ng-click="login(user)">Sign-in</button>
+          ng-click="login(user)">Sign-in</button><br>
+        <div style="font-weight: bold;">{{msg}}<a href="http://127.0.0.1:5500/frontend/index.html#/registration" style="font-weight: bold; ">here</a></div>
       </section>
 </body>
 </html>
