--- a/frontend/views/registrationPage.html
+++ b/frontend/views/registrationPage.html
@@ -9,7 +9,7 @@
         <h1 style="text-align: center;">{{app}}</h1><br>
         <form name="userForm">
           <h4>Name</h4> <input type="text" class="form-control" placeholder="name" aria-label="name"
-           name="name" ng-model="user.name" ng-minlength="10" ng-required="true" maxlength="45">
+           name="name" ng-model="user.name" ng-required="true" maxlength="45">
           <h4>Email</h4> <input type="text" class="form-control" placeholder="email" aria-label="email"
            name="email" ng-model="user.email" ng-required="true">
           <h4>Password</h4><input type="password" class="form-control" placeholder="password" aria-label="password"
