--- a/frontend/views/updateUsersPage.html
+++ b/frontend/views/updateUsersPage.html
@@ -29,11 +29,11 @@
             {{error}}
         </div>
 
-        <button type="submit" class="btn btn-primary btn-block" ng-click="updateUser(user)">Sign-in</button><br>
-
         <div ng-show="mensagem" class="alert alert-success" style="font-weight: bold; margin-top: 20px;">
-            {{msg}}
+            {{mensagem}}
         </div>
+        
+        <button type="submit" class="btn btn-primary btn-block" ng-click="updateUser(user)">Sign-in</button><br>
     </section>
 </body>
 
