--- a/frontend/views/updateStudentsPage.html
+++ b/frontend/views/updateStudentsPage.html
@@ -2,12 +2,17 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Student Registration Page</title>
+    <title>Student Update Page</title>
 </head>
 <body>
     <section class="container">
         <h1 style="text-align: center;">{{app}}</h1><br>
-        <form name="studentForm">
+
+        <div ng-show="loading" style="display: flex; justify-content: center;">
+          <img src="../../loading-buffering.gif" alt="" style="width: 60px; height: 60px;">
+        </div>
+
+        <form name="studentForm" ng-show="!loading">
           <h4>Name</h4> <input type="text" class="form-control" placeholder="name" aria-label="name"
            name="name" ng-model="student.name" ng-required="true" maxlength="45">
            <h4>Last name</h4> <input type="text" class="form-control" placeholder="last name" aria-label="lastName"
@@ -21,10 +26,11 @@
            <h4>Height</h4> <input type="text" class="form-control" placeholder="height" aria-label="height"
            name="height" ng-model="student.height" ng-required="true">
         </form>
-        <button type="submit" class="btn btn-primary btn-block"
-          ng-click="addStudents(student)">Add Student</button><br>
-        <div class="alert alert-danger" ng-if="error" style="font-weight: bold;">{{error}}</div>
+
+        <button ng-disabled="loading" type="submit" class="btn btn-primary btn-block"
+          ng-click="updateStudents(student)">Update Student</button><br>
         <div class="alert alert-success" ng-if="isValid" style="font-weight: bold;">{{mensagem}}</div>
+        <div class="alert alert-danger" ng-if="error" style="font-weight: bold;">{{error}}</div>
       </section>
 </body>
 </html>
