--- a/frontend/views/updateUsersPage.html
+++ b/frontend/views/updateUsersPage.html
@@ -33,7 +33,7 @@
             {{mensagem}}
         </div>
         
-        <button type="submit" class="btn btn-primary btn-block" ng-click="updateUser(user)">Sign-in</button><br>
+        <button type="submit" class="btn btn-primary btn-block" ng-click="updateUser(user)">Update your profile</button><br>
     </section>
 </body>
 
