--- a/frontend/views/updateStudentsPage.html
+++ b/frontend/views/updateStudentsPage.html
@@ -10,7 +10,7 @@
 
         <div ng-show="loading" style="display: flex; justify-content: center;">
           <img src="../../loading-buffering.gif" alt="" style="width: 60px; height: 60px;">
-        </div>
+        </div> <!-- div do reload -->
 
         <form name="studentForm" ng-show="!loading">
           <h4>Name</h4> <input type="text" class="form-control" placeholder="name" aria-label="name"
