--- a/frontend/myCss/style.css
+++ b/frontend/myCss/style.css
@@ -27,7 +27,7 @@ li:hover{
   background-color:cornflowerblue
 }
 
-a#edit:hover{
+a#edit:hover, a#delete:hover{
   color: #fff;
   cursor: pointer;
 }
