--- a/frontend/views/loginPage.html
+++ b/frontend/views/loginPage.html
@@ -7,9 +7,12 @@
 <body>
     <section class="container">
         <h1 style="text-align: center;">{{app}}</h1><br>
+        <div ng-show="loading" style="display: flex; justify-content: center;">
+          <img src="../loading-buffering.gif" alt="" style="width: 60px; height: 60px;">
+        </div> <!-- div do reload -->
         <form name="userForm">
-          <h4>Email</h4> <input type="text" class="form-control" placeholder="Email" aria-label="Email"
-           name="email" ng-model="user.email" ng-minlength="10" ng-required="true" maxlength="45">
+          <h4>Email</h4> <input type="text" class="form-control" placeholder="email" aria-label="Email"
+           name="email" ng-model="user.email" ng-required="true" maxlength="45">
           <h4>Password</h4><input type="password" class="form-control" placeholder="password" aria-label="password"
            name="password" ng-model="user.password" ng-required="true" ng-minlength="6">
         </form>
@@ -20,7 +23,7 @@
 
         <button type="submit" class="btn btn-primary btn-block"
           ng-click="login(user)">Sign-in</button><br>
-        <div style="font-weight: bold;">{{msg}}<a href="http://127.0.0.1:5501/frontend/index.html#/registration" style="font-weight: bold; ">here</a></div>
+        <div style="font-weight: bold;">{{msg}}<a href="http://127.0.0.1:5500/index.html#/registration" style="font-weight: bold; ">here</a></div>
       </section>
 </body>
 </html>
