--- a/frontend/views/registrationPage.html
+++ b/frontend/views/registrationPage.html
@@ -7,6 +7,9 @@
 <body>
     <section class="container">
         <h1 style="text-align: center;">{{app}}</h1><br>
+        <div ng-show="loading" style="display: flex; justify-content: center;">
+          <img src="../loading-buffering.gif" alt="" style="width: 60px; height: 60px;">
+        </div> <!-- div do reload -->
         <form name="userForm">
           <h4>Name</h4> <input type="text" class="form-control" placeholder="name" aria-label="name"
            name="name" ng-model="user.name" ng-required="true" maxlength="45">
@@ -18,7 +21,7 @@
         <button type="submit" class="btn btn-primary btn-block"
           ng-click="addUser(user)">Send</button><br>
         <div class="alert alert-danger" ng-if="error" style="font-weight: bold;">{{error}}</div>
-        <div style="font-weight: bold;">{{msg}}<a href="http://127.0.0.1:5500/frontend/index.html#/login" style="font-weight: bold; ">here</a></div>
+        <div style="font-weight: bold;">{{msg}}<a href="http://127.0.0.1:5500/index.html#/login" style="font-weight: bold; ">here</a></div>
       </section>
 </body>
 </html>
