--- a/frontend/views/sorryPage.html
+++ b/frontend/views/sorryPage.html
@@ -7,11 +7,11 @@
 <body>
     <div class="alert alert-success" role="alert">
         <h4 class="alert-heading">Sorry!</h4>
-        <p>I'm so sorry, but this page doesn't exists, try another one or come back to the menu page <a href="http://127.0.0.1:5501/frontend/index.html#/menu">here</a></p>
+        <p>I'm so sorry, but this page doesn't exists, try another one or come back to the menu page <a href="http://127.0.0.1:5500/index.html#/menu">here</a></p>
         <hr>
-        <p class="mb-0">Whenever you need to, be sure to use our website School Full.</p>
+        <p class="mb-0">Whenever you need to, be sure to use our website School Full!</p>
       </div>
 
-      <img src="/carinha_triste.jpeg" style="height: 300px; width: 300px;">
+      <img ng-src="../carinha_triste.jpeg" style="height: 300px; width: 300px;">
 </body>
 </html>
