--- a/frontend/views/updateStudentsPage.html
+++ b/frontend/views/updateStudentsPage.html
@@ -12,6 +12,9 @@
           <img src="../loading-buffering.gif" alt="" style="width: 60px; height: 60px;">
         </div> <!-- div do reload -->
 
+        <!-- <input style="width: 460px;" type="file" class=" form-control form-control-lg" 
+           id="formFieldLg" name="photo" ng-model="student.photo"> -->
+
         <form name="studentForm" ng-show="!loading">
           <h4>Name</h4> <input type="text" class="form-control" placeholder="name" aria-label="name"
            name="name" ng-model="student.name" ng-required="true" maxlength="45">
@@ -25,13 +28,12 @@
            name="weight" ng-model="student.weight" ng-required="true">
            <h4>Height</h4> <input type="text" class="form-control" placeholder="height" aria-label="height"
            name="height" ng-model="student.height" ng-required="true">
-           <h4>Add or Change your Photo</h4> <input style="width: 460px;" type="file" class=" form-control form-control-lg" 
-           id="formFieldLg" name="photo" ng-model="student.photo">
+           <h4>Add or Change your Photo</h4><button ng-disabled="loading" type="submit" class="btn btn-primary"
+           ng-click="addPhoto()">Add photo</button>
         </form>
         
         <button ng-disabled="loading" type="submit" class="btn btn-primary btn-block"
           ng-click="updateStudents(student)">Update Student</button><br>
-        <div class="alert alert-success" ng-if="isValid" style="font-weight: bold;">{{mensagem}}</div>
         <div class="alert alert-danger" ng-if="error" style="font-weight: bold;">{{error}}</div>
       </section>
 </body>
