--- a/frontend/views/menuPage.html
+++ b/frontend/views/menuPage.html
@@ -39,7 +39,7 @@
         </div>
         <ul class="list-group list-group-flush" ng-repeat="student in students">
             <li class="list-group-item">
-                <img src="../1634842186564_14810.jpg" class="rounded-circle" width="60" height="60">
+                <img src="student.photo" class="rounded-circle" width="60" height="60">
                 Name: {{student.name}} {{student.surname}}
                 <span style="float: right; margin-right: 15px;">
                     Age: {{student.age}}
