--- a/frontend/views/sorryPage.html
+++ b/frontend/views/sorryPage.html
@@ -12,6 +12,6 @@
         <p class="mb-0">Whenever you need to, be sure to use our website School Full!</p>
       </div>
 
-      <img ng-src="../carinha_triste.jpeg" style="height: 300px; width: 300px;">
+      <img src="/frontend/carinha_triste.jpeg" style="height: 300px; width: 300px;">
 </body>
 </html>
