--- a/frontend/views/updateStudentsPage.html
+++ b/frontend/views/updateStudentsPage.html
@@ -9,7 +9,7 @@
         <h1 style="text-align: center;">{{app}}</h1><br>
 
         <div ng-show="loading" style="display: flex; justify-content: center;">
-          <img src="../loading-buffering.gif" alt="" style="width: 60px; height: 60px;">
+          <img src="./loading-buffering.gif" alt="" style="width: 60px; height: 60px;">
         </div> <!-- div do reload -->
 
         <!-- <input style="width: 460px;" type="file" class=" form-control form-control-lg" 
