--- a/frontend/views/addPhotoPage.html
+++ b/frontend/views/addPhotoPage.html
@@ -9,14 +9,14 @@
         <h1 style="text-align: center;">{{app}}</h1><br>
 
         <div ng-show="loading" style="display: flex; justify-content: center;">
-          <img src="../loading-buffering.gif" alt="" style="width: 60px; height: 60px;">
+          <img src="./loading-buffering.gif" alt="" style="width: 60px; height: 60px;">
         </div> <!-- div do reload -->
         
         <form name="photoForm" enctype="multipart/form-data" id="photoForm">
           <input style="width: 460px;" type="file" id="file" ng-file-select="onFileSelect($files)" class="form-control form-control-lg" 
               name="photo" ng-model="photo">
               
-          <button ng-disabled="loading" type="submit" class="btn btn-primary btn-block" ng-click="add()">
+          <button ng-disabled="loading" type="submit" class="btn btn-primary btn-block">
             addPhoto
           </button><br>
         </form>
