--- a/frontend/views/updateUsersPage.html
+++ b/frontend/views/updateUsersPage.html
@@ -10,7 +10,7 @@
     <section class="container">
         <h1 style="text-align: center;">{{app}}</h1><br>
         <div ng-show="loading" style="display: flex; justify-content: center;">
-            <img src="../loading-buffering.gif" alt="" style="width: 60px; height: 60px;">
+            <img src="./loading-buffering.gif" alt="" style="width: 60px; height: 60px;">
           </div> <!-- div do reload -->
         <form name="userForm">
             <h4>Name</h4> <input type="text" class="form-control" placeholder="name" aria-label="name" name="name"
