--- a/frontend/views/changePhotoPage.html
+++ b/frontend/views/changePhotoPage.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Add Photo Page</title>
+    <title>Change Photo Page</title>
 </head>
 <body>
     <section class="container">
@@ -12,14 +12,14 @@
           <img src="/frontend/uploads/loading-buffering.gif" alt="" style="width: 60px; height: 60px;">
         </div> <!-- div do reload -->
         
-        <form name="photoForm" enctype="multipart/form-data" id="photoForm">
-          <input style="width: 460px;" type="file" id="file" ng-file-select="onFileSelect($files)" class="form-control form-control-lg" 
+        <form name="changePhotoForm" enctype="multipart/form-data" id="changePhotoForm">
+          <input style="width: 460px;" type="file" id="changeFile" ng-file-select="onFileSelect($files)" class="form-control form-control-lg" 
               name="photo" ng-model="photo">
-              
           <button ng-disabled="loading" type="submit" class="btn btn-primary btn-block">
-            addPhoto
+            changePhoto
           </button><br>
         </form>
+        <div class="alert alert-danger" ng-if="error" style="font-weight: bold;">{{error}}</div>
       </section>
 </body>
 </html>
