--- a/frontend/views/updateStudentsPage.html
+++ b/frontend/views/updateStudentsPage.html
@@ -9,7 +9,7 @@
         <h1 style="text-align: center;">{{app}}</h1><br>
 
         <div ng-show="loading" style="display: flex; justify-content: center;">
-          <img src="./loading-buffering.gif" alt="" style="width: 60px; height: 60px;">
+          <img src="/frontend/uploads/loading-buffering.gif" alt="" style="width: 60px; height: 60px;">
         </div> <!-- div do reload -->
 
         <!-- <input style="width: 460px;" type="file" class=" form-control form-control-lg" 
@@ -30,6 +30,10 @@
            name="height" ng-model="student.height" ng-required="true">
            <h4>Add or Change your Photo</h4><button ng-disabled="loading" type="submit" class="btn btn-primary"
            ng-click="addPhoto()">Add photo</button>
+           <button ng-disabled="loading" type="submit" class="btn btn-primary"
+           ng-click="changePhoto()">Change photo</button>
+           <button ng-disabled="loading" type="submit" class="btn btn-danger"
+           ng-click="deletePhoto()">Delete your photo</button>
         </form>
         
         <button ng-disabled="loading" type="submit" class="btn btn-primary btn-block"
